<resources>
    <string name="app_name">씨네마천국</string>

    <string name="movie_name">영화제목</string>
    <string name="open_date">0000.00.00 개봉 \n장르 / 000 분</string>

    <string name="cnt_thumb_up">0</string>
    <string name="cnt_thumb_down">0</string>

    <string name="rate_text">예매율</string>
    <string name="rate">0위 0.0%</string>

    <string name="grade_text">평점</string>
    <string name="grade">0.0</string>

    <string name="audience_cnt_text">누적관객수</string>
    <string name="audience_cnt">000,000명</string>

    <string name="summary_text">줄거리</string>
    <string name="summary">줄거리 입니다.
    \n줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.

    \n\n줄거리입니다.
    \n줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.

    \n\n줄거리입니다.
    \n줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다.줄거리입니다....</string>

    <string name="director_n_actor_text">감독/출연</string>

    <string name="director_text">감독</string>
    <string name="director">윤종빈</string>

    <string name="actor_text">출연</string>
    <string name="actor">배우1이름(배역1이름),배우2이름(배역2이름)</string>

    <string name="review_text">한줄평</string>
    <string name="review_write_text">작성하기</string>
    <string name="review_more_text">모두 보기</string>

    <string name="book_text">예매하기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main1">씨네마 천국</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Song</string>
    <string name="nav_header_subtitle">0603yango@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">영화 목록</string>
    <string name="menu_api">영화 API</string>
    <string name="menu_book">영화 예약</string>
    <string name="menu_user">사용자 선택</string>

</resources>
