<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie_list_item"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_api_item"
            android:icon="@drawable/ic_review"
            android:title="@string/menu_api" />
        <item
            android:id="@+id/nav_book_item"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_book" />
    </group>

    <item android:title="설정">
        <menu>
            <item
                android:id="@+id/nav_setting_item"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_user" />
        </menu>
    </item>

</menu>
