<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="moreReview"
            type="com.song2.boostcourse.ui.MoreReviewActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/tv_more_review_act_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/movie_name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_more_review_act_movie_rating_12"
                    android:visibility="gone"
                    android:layout_toEndOf="@+id/tv_more_review_act_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_12" />
                <ImageView
                    android:id="@+id/iv_more_review_act_movie_rating_15"
                    android:visibility="visible"
                    android:layout_toEndOf="@+id/tv_more_review_act_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_15" />
                <ImageView
                    android:id="@+id/iv_more_review_act_movie_rating_19"
                    android:visibility="gone"
                    android:layout_toEndOf="@+id/tv_more_review_act_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_19" />
                <ImageView
                    android:id="@+id/iv_more_review_act_movie_rating_all"
                    android:visibility="gone"
                    android:layout_toEndOf="@+id/tv_more_review_act_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/ic_all" />

                <View
                    android:id="@+id/more_review_act_view"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"/>

                <LinearLayout
                    android:layout_below="@+id/more_review_act_view"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/rb_more_review_act_ratingBar"
                        style="@style/Base.Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="4.5"
                        android:stepSize="0.5" />

                    <TextView
                        android:id="@+id/tv_more_review_act_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="8.2 (1,1472명 참여)"
                        android:textSize="16sp"/>
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_more_review_act_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <View
                        android:id="@+id/more_review_act_view_review"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/tv_more_review_act_text"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGray"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_review_selected" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:text="@string/review_write_text"
                            android:textColor="#e65100"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </RelativeLayout>

                <com.song2.boostcourse.ui.MyListView
                    android:id="@+id/listView_more_review_act_review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"></com.song2.boostcourse.ui.MyListView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>